Duplicating armature and then changing the duplicate's bone names causes drivers to break in the ORIGINAL armature #30709

Closed
opened 2012-03-28 23:25:25 +02:00 by Harrison Nordby · 6 comments

%%%The blend file contains "Armature A" with two bones, "bone A" and "squisher A" The squisher bone scales the vertical bone with a driver.

Steps for repro:

  1. Duplicate the armature object and move it along the x axis by a few units.
  2. Rename the duplicate armature's squisher bone to "squisher B"
  3. The duplicate armature works properly, but the driver in the original armature has broken; it's now referencing "squisher B."

Tested on official 2.62 as well as 2.62.3 r45246

Windows 7

%%%

%%%The blend file contains "Armature A" with two bones, "bone A" and "squisher A" The squisher bone scales the vertical bone with a driver. Steps for repro: 1. Duplicate the armature object and move it along the x axis by a few units. 2. Rename the duplicate armature's squisher bone to "squisher B" 3. The duplicate armature works properly, but the driver in the original armature has broken; it's now referencing "squisher B." Tested on official 2.62 as well as 2.62.3 r45246 Windows 7 %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Bastien, i remember you've been working on armatures, maybe this one is simple for you? :)%%%

%%%Bastien, i remember you've been working on armatures, maybe this one is simple for you? :)%%%

%%%In fact, the problems occurs with any driver, being an armature (bone) one, or a standard object one, or anything – Duplication has nothing to see here… Seems like the update process of drivers’ bone names is broken, not taking into account the "parent" object at al.

Investigating further!%%%

%%%In fact, the problems occurs with any driver, being an armature (bone) one, or a standard object one, or anything – Duplication has nothing to see here… Seems like the update process of drivers’ bone names is broken, not taking into account the "parent" object at al. Investigating further!%%%

%%%This indeed a problem in updating of stuff using a given bone, when it is renamed (BKE_all_animdata_fix_paths_rename() & co, in anim_sys.c).

Attached a patch, but I’m not sure this is the right way to fix it, seems rather hackish to me… :/%%%

%%%This indeed a problem in updating of stuff using a given bone, when it is renamed (BKE_all_animdata_fix_paths_rename() & co, in anim_sys.c). Attached a patch, but I’m not sure this is the right way to fix it, seems rather hackish to me… :/%%%

%%%Fixed in svn45291.

Thanks for reporting! :)%%%

%%%Fixed in svn45291. Thanks for reporting! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30709
No description provided.