source/blender/makesrna/intern/rna_constraint.c
@@ -211,7 +211,7 @@ static void rna_Constraint_name_set(PointerRNA *ptr, const char *value)
 	}
 	
 	/* fix all the animation data which may link to this */
-	BKE_all_animdata_fix_paths_rename("constraints", oldname, con->name);
+	BKE_all_animdata_fix_paths_rename(NULL, "constraints", oldname, con->name);
 }
 
 static char *rna_Constraint_path(PointerRNA *ptr)
